<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NAK timetable</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_back">Back</string>
    <string name="action_lecturer_detail" translatable="false">Details</string>
    <string name="action_lecturer_mail">Send Mail</string>


    <string name="sync_account_type" translatable="false">de.nordakademie.stundenplan.app</string>
    <string name="content_authority" translatable="false">de.nordakademie.stundenplan.app</string>

    <!-- century-preferences -->
    <string name="pref_century_label">Century</string>
    <string name="pref_century_key" translatable="false">century</string>
    <string name="pref_century_default" translatable="false">I15a</string>

    <!-- Calendar Week-Preferences -->
    <string name="pref_cw_label">Calendar Week</string>
    <string name="pref_cw_key" translatable="false">calendar_week</string>
    <string name="pref_cw_default" translatable="false">1</string>
    <string name="pref_cw_hint">the actual calendar_week</string>

    <!-- Sync Calendar Weeks preferences -->
    <string name="pref_sync_cw_label">Sync calendar week</string>
    <string name="pref_sync_cw_key" translatable="false">sync_cw</string>
    <string name="pref_sync_true">Enabled</string>
    <string name="pref_sync_false">Disabled</string>
    <string name="pref_sync_cw_default" translatable="false">false</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Your Timetable has been updated!
    </string>
    <string name="new_stuff_label">New Fancy Stuff!</string>
    <string name="new_stuff">Now you can swipe between the Days!</string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Timetable Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Disabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="warn_wrong_cw">Disabled</string>
    <string name="warn_no_network">Warning: No Connection to the Internet</string>

    <string name="teaching_unit">TU</string>

    <!-- Strings related to changecodes -->
    <string name="changeCode_0">No changes</string>
    <string name="changeCode_1">Room changed</string>
    <string name="changeCode_2">Time changed</string>
    <string name="changeCode_3">Time and room changed</string>
    <string name="changeCode_4">Lesson is canceled</string>
    <string name="changeCode_invalid">Changecode is invalid. Please contact your admin!</string>

    <!-- Strings related to test-forms -->
    <string name="testform_homework">Homework</string>
    <string name="testform_exam">Exam</string>
    <string name="testform_lecture">Lecture</string>
    <string name="testform_portfolio">Portfolio</string>
    <string name="testform_project">Project</string>
    <string name="testform_invalid">Testform is invalid. Please contact your admin!</string>

    <!-- Strings related to lecturer -->
    <string name="lecturer_office">Office:</string>
    <string name="lecturer_phone">Phone:</string>
    <string name="lecturer_mail" translatable="false">Mail:</string>
    <string name="lecturer_mail_send_text">Send email...</string>
    <string name="lesson_lecturer">Lecturer:</string>
    <string name="lesson_room">Room:</string>
    <string name="lesson_testform">Testform:</string>
    <string name="lesson_time">Time:</string>
    <string name="lesson_changeCode">Change:</string>
    <string name="lable_lecturer_office">Office</string>
    <string name="lable_lecturer_phone">Phone</string>

    <string name="week_monday">Monday</string>
    <string name="week_tuesday">Tuesday</string>
    <string name="week_wednesday">Wednesday</string>
    <string name="week_thursday">Thursday</string>
    <string name="week_friday">Friday</string>
    <string name="week_saturday">Saturday</string>
    <string name="week_sunday">Sunday</string>




</resources>
